--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-PyQt6>=6.0.0
-numpy>=1.20.0
-pyinstaller>=5.0.0
-pywin32>=300
-winshell>=0.6
-Pillow>=9.0.0
-opencv-python>=4.8.0 
+PyQt6>=6.4.0
+PyQt6-Qt6>=6.4.0
+PyQt6-sip>=13.4.0
+opencv-python>=4.6.0
+numpy>=1.23.4
+Pillow>=9.3.0
